@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-06T01:12:53Z",
+  "timestamp" : "2023-08-06T08:17:06Z",
   "count_outdated" : 741,
   "uniques_outdated" : 424,
-  "count" : 767,
-  "uniques" : 441,
+  "count" : 768,
+  "uniques" : 442,
   "clones" : [
     {
       "timestamp": "2023-07-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -115,6 +115,15 @@
     },
     {
       "timestamp": "2023-08-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
