@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-07-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2023-08-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
